--- a/app/src/main/res/layout/field.xml
+++ b/app/src/main/res/layout/field.xml
@@ -14,6 +14,13 @@
         android:orientation="horizontal"
         android:padding="1dp">
 
+        <ImageView
+            android:id="@+id/iconLocation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            app:srcCompat="@mipmap/ic_launcher"
+            android:clickable="true"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,17 +34,26 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_marginLeft="15dp"
-                android:layout_marginTop="1dp"
-
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 android:textColor="#FFFFFF"
-                android:textSize="20sp" />
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/location_edtxt2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="5dp"
+                android:textColor="#FFFFFF"
+                android:textSize="11sp" />
 
         </LinearLayout>
 
         <Button
             android:id="@+id/delete_btn"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:background="@drawable/delete"
             android:visibility="visible" />
 
