--- a/app/src/main/res/layout/field.xml
+++ b/app/src/main/res/layout/field.xml
@@ -19,12 +19,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            app:srcCompat="@mipmap/ic_launcher"
-            android:clickable="true"/>
+            app:srcCompat="@mipmap/ic_launcher" />
 
         <LinearLayout
+            android:id="@+id/bt_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
             android:layout_weight="1"
             android:orientation="vertical">
 
@@ -45,6 +46,7 @@
                 android:layout_marginStart="15dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="5dp"
+                android:clickable="false"
                 android:textColor="#FFFFFF"
                 android:textSize="11sp" />
 
