--- a/app/src/main/res/layout/field.xml
+++ b/app/src/main/res/layout/field.xml
@@ -16,10 +16,10 @@
 
         <ImageView
             android:id="@+id/iconLocation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:padding="5dp"
-            app:srcCompat="@mipmap/ic_launcher" />
+            app:srcCompat="@android:drawable/ic_menu_mylocation" />
 
         <LinearLayout
             android:id="@+id/bt_view"
