--- a/app/src/main/res/layout/fragment_emergency.xml
+++ b/app/src/main/res/layout/fragment_emergency.xml
@@ -129,6 +129,7 @@
                     android:layout_marginBottom="10dp"
                     android:clickable="true"
                     android:gravity="center"
+                    android:longClickable="true"
                     android:orientation="vertical"
                     android:padding="5dp">
 
@@ -138,7 +139,8 @@
                         android:layout_height="176dp"
                         android:layout_marginBottom="5dp"
                         android:background="@drawable/call_relative"
-                        android:clickable="false" />
+                        android:clickable="false"
+                        android:longClickable="false" />
 
                     <TextView
                         android:layout_width="match_parent"
