--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -59,7 +59,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:paddingLeft="5dp"
-                        android:text="Location send"
+                        android:text="Location"
                         android:textColor="@color/s_text"
                         android:textSize="14sp"
                         android:textStyle="bold" />
@@ -168,7 +168,7 @@
                         android:layout_height="35dp"
                         android:layout_marginTop="2dp"
                         android:paddingLeft="10dp"
-                        android:text="Backup User Contact to server"
+                        android:text="Backup User Contact to Server"
                         android:textColor="@color/s_text"
                         android:textSize="18sp" />
 
