--- a/app/src/main/res/layout/user_customview.xml
+++ b/app/src/main/res/layout/user_customview.xml
@@ -6,6 +6,7 @@
     android:orientation="horizontal">
 
     <LinearLayout
+        android:id="@+id/user_custom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="right|left"
